ELS Code/main/default/objects/Partner_Sources__c/Partner_Sources__c.object-meta.xml
<CustomObject>
    <label>Partner Sources</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Partner Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>