ELS Code/main/default/objects/Partner_Sources__c/fields/Backup_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Backup_Source_Id__c</fullName>
    <label>Backup Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>