ELS Code/main/default/objects/Partner_Sources__c/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <formula>Contact_Id__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Country</label>
    <type>Text</type>
</CustomField>