ELS Code/main/default/objects/Partner_Sources__c/fields/Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_State__c</fullName>
    <formula>Contact_Id__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact State</label>
    <type>Text</type>
</CustomField>