ELS Code/main/default/objects/Partner_Sources__c/fields/Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zip__c</fullName>
    <formula>Contact_Id__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Zip</label>
    <type>Text</type>
</CustomField>