ELS Code/main/default/objects/Partner_Sources__c/fields/Filter_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Filter_Arrival__c</fullName>
    <label>Filter Arrival</label>
    <length>20</length>
    <type>Text</type>
</CustomField>