ELS Code/main/default/objects/Partner_Sources__c/fields/Filter_Departure__c.field-meta.xml
<CustomField>
    <fullName>Filter_Departure__c</fullName>
    <label>Filter Departure</label>
    <length>20</length>
    <type>Text</type>
</CustomField>