ELS Code/main/default/objects/Partner_Sources__c/fields/Form_Location_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Form_Location_on_Site__c</fullName>
    <label>Form Location on Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Footer</fullName>
            </value>
            <value>
                <fullName>French Reservation</fullName>
            </value>
            <value>
                <fullName>Park Models</fullName>
            </value>
            <value>
                <fullName>Rally Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>