ELS Code/main/default/objects/Partner_Sources__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <formula>Sources_Id__r.Form_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Type</label>
    <type>Text</type>
</CustomField>