ELS Code/main/default/objects/Partner_Sources__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <length>20</length>
    <type>Text</type>
</CustomField>