ELS Code/main/default/objects/Partner_Sources__c/fields/How_Did_You_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Us__c</fullName>
    <formula>Sources_Id__r.How_Did_You_Hear_About_Us__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How Did You Hear About Us</label>
    <type>Text</type>
</CustomField>