ELS Code/main/default/objects/Partner_Sources__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <formula>Sources_Id__r.IP_Address__c</formula>
    <label>IP Address</label>
    <type>Text</type>
</CustomField>