ELS Code/main/default/objects/Partner_Sources__c/fields/Need_Meeting_Hall__c.field-meta.xml
<CustomField>
    <fullName>Need_Meeting_Hall__c</fullName>
    <label>Need Meeting Hall</label>
    <length>20</length>
    <type>Text</type>
</CustomField>