ELS Code/main/default/objects/Partner_Sources__c/fields/Number_Of_RVS__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_RVS__c</fullName>
    <label>Number Of RVS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>