ELS Code/main/default/objects/Partner_Sources__c/fields/Resort_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Resort_Interested_In__c</fullName>
    <formula>Sources_Id__r.Resort_Interested_In__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resort Interested In</label>
    <type>Text</type>
</CustomField>