ELS Code/main/default/objects/Partner_Sources__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <formula>if(!ISBLANK(Sources_Id__r.Source_ID__c), Sources_Id__r.Source_ID__c, Backup_Source_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source ID</label>
    <type>Text</type>
</CustomField>