ELS Code/main/default/objects/Partner_Sources__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <formula>if(!ISBLANK(Sources_Id__r.Source_ID__c),Text(Sources_Id__r.Source_Type__c), &apos;Other&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Type</label>
    <type>Text</type>
</CustomField>