ELS Code/main/default/objects/Partner_Sources__c/fields/Sources_Id__c.field-meta.xml
<CustomField>
    <fullName>Sources_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Sources__c</referenceTo>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>