ELS Code/main/default/objects/Partner_Sources__c/fields/Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Sub_type__c</fullName>
    <formula>TEXT(Sources_Id__r.Sub_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-type</label>
    <type>Text</type>
</CustomField>