ELS Code/main/default/objects/Partner_Sources__c/fields/Web_Form_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_Description__c</fullName>
    <label>Web Form Description</label>
    <type>TextArea</type>
</CustomField>